2004-05-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (plot_boxes): Clip lower border of
	boxxyerrorbars, too.
	(do_plot): Regrouped master switch over plot types.  Draw box
	first in BOXERROR mode, to keep the lower part of the errorbar
	visible.

	* src/util.c (mant_exp): Extend technique for rounding exponents
	depending on the printf format precison of the mantissa to format
	specifiers %l and %L used for log bases other than 10.  Fixes SF
	bug #851685.

2004-05-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/debug.trm (DEBUG_arrow): Fix type of 'head' argument
	overlooked in earlier global change.

	* src/plot2d.c (get_data): Fix mininum number of columnts for
	boxerrorbars style.  Fixed handling of 4-column boxerrorbars in
	case of "set boxwidth -2" to match the documentation.

	* src/graphics.c (plot_impulses): Fix bug in clipping of impulses
	for out-of-range points.  Was using an integer value to store a
	floating-point temporary number.

	* src/plot2d.c (print_table): Make the table terminal output two
	blank lines at the end of each curve_points structure, to allow
	selection of individual datasets via the 'index' option.

	* docs/doc2texi.el (d2t-handle-html): Handle anchor-only <a> tags
	more sensibly: output them to the texinfo file as a @c comment.
	Patch from Shigharu Takeno.
	
	* docs/gnuplot.texi: Regenerated.

2004-05-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c: Fix broken zoom history with a log axis.

2004-05-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c src/win/wpause.c: Support for "pause mouse" in Windows
	terminal.

2004-05-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): prevent plot from flipping upside-down
	if the title or key take up too much vertical space.

	* term/post.trm: Add explicit default case to encoding switch.

2004-05-09  Ethan Merritt  <merritt@u.washington.edu>
